--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<link rel="preload" href="./assets/fonts/icons.woff2" as="font" type="font/woff2" crossorigin="anonymous">
 		<link rel="shortcut icon" href="./assets/img/favicon.ico">
-		<title>Home</title>
-		<script type="module" crossorigin="" src="./js/app.min.js?v=1753539671670"></script>
-		<link rel="stylesheet" crossorigin="" href="./css/app.min.css?v=1753539671670">
+		<title>Головна</title>
+		<script type="module" crossorigin="" src="./js/app.min.js?v=1754352686234"></script>
+		<link rel="stylesheet" crossorigin="" href="./css/app.min.css?v=1754352686234">
 	</head>
 	<body>
 		<div class="wrapper">
@@ -257,6 +257,16 @@
 					</a>
 				</div>
 				<button class="mobile-menu__logout">Вийти з акаунта</button>
+			</div>
+			<div data-fls-popup="auth-popup" aria-hidden="true" class="popup popup--auth">
+				<div data-fls-popup-wrapper="" class="popup__wrapper">
+					<div data-fls-popup-body="" class="popup__body">
+						<button data-fls-popup-close="" type="button" class="popup__close _icon-cross"></button>
+						<div class="auth-popup">
+							<div class="auth-popup__aside">tghyththt</div>
+						</div>
+					</div>
+				</div>
 			</div>
 			<main class="page">
 				<div class="page__home home">
@@ -2985,11 +2995,11 @@
 						</div>
 						<div class="footer__sub">
 							<h4 class="footer__title">Підписатися на новини</h4>
-							<form action="#" class="footer__form">
-								<div class="footer__field field">
+							<form action="#" class="footer__form subs-form">
+								<div class="subs-form__field field">
 									<input type="email" placeholder="Ваш email" class="field__input">
 								</div>
-								<button class="footer__button button button--border">Підписатися</button>
+								<button class="subs-form__button button button--border">Підписатися</button>
 							</form>
 						</div>
 					</div>
